--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = atmelavr
 board = uno
 framework = arduino
+lib_deps = 
+	adafruit/Adafruit SSD1306@^2.5.1
+	adafruit/Adafruit BusIO@^1.11.1
