--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,8 @@
 platform = atmelavr
 board = uno
 framework = arduino
+upload_speed = 115200
+monitor_speed = 9600
 lib_deps = 
 	adafruit/Adafruit SSD1306@^2.5.1
 	adafruit/Adafruit BusIO@^1.11.1
