--- a/platformio.ini
+++ b/platformio.ini
@@ -15,5 +15,5 @@ framework = arduino
 upload_speed = 115200
 monitor_speed = 9600
 lib_deps = 
-	adafruit/Adafruit SSD1306@^2.5.1
-	adafruit/Adafruit BusIO@^1.11.1
+	adafruit/Adafruit NeoPixel@^1.10.4
+	adafruit/Adafruit BusIO@^1.11.2
